--- a/css/theme-switcher.css
+++ b/css/theme-switcher.css
@@ -14,7 +14,7 @@
 }
 
 .btn-theme-toggle {
-    display: var(--flex);
+    display: flex;
     align-items: center;
     padding: 0.5rem 0.5rem 0.75rem 0;
     border-bottom: 5px solid var(--clr-green);
